Implemented skeleton with no dead-ends. Event creation implemented.

--- a/potlucks/templates/potlucks/event_index.html
+++ b/potlucks/templates/potlucks/event_index.html
@@ -1,5 +1,34 @@
 {% include "potlucks/navbar.html" %}
 {% load static %}
+<link rel="stylesheet" type="text/css" href='{% static "potlucks/main.css" %}'>
+<link rel="stylesheet" type="text/css" href='{% static "potlucks/table-list.css" %}'>
+
 <div class="main">
-<h1>This is the event index</h1>
+<h1>My Events</h1>
+
+<div class="table-list" id="hosted_table" style="float: left; width: 50%;">
+<h2>Events that I am hosting:</h2>
+<table>
+<tr><th>Event Name</th><th>Event Start</th><th>Event End</th></tr>
+{% for event in event_list %}
+    <tr><td><a href="{% url 'potlucks:event_dishes' %}?id={{ event.pk }}">{{ event.name }}</a></td>
+        <td>{{ event.start_time }}</td>
+        <td>{{ event.end_time }}</td></tr>
+{% endfor %}
+</table>
+</div>
+
+<!--Make second table for invited event, start hidden from view-->
+<div class="table-list" id="invited-table" style="float: left; top: 30px; width: 50%; ">
+<h2>Events that I am invited to:</h2>
+<table>
+<tr><th>Event Name</th><th>Event Start</th><th>Event End</th></tr>
+{% for event in event_list %}
+    <tr><td><a href="{% url 'potlucks:event_dishes' %}?id={{ event.pk }}">{{ event.name }}</a></td>
+        <td>{{ event.start_time }}</td>
+        <td>{{ event.end_time }}</td></tr>
+{% endfor %}
+</table>
+</div>
+
 </div>
