--- a/potlucks/templates/potlucks/navbar.html
+++ b/potlucks/templates/potlucks/navbar.html
@@ -10,10 +10,17 @@
 </ul>   
 </div>
 <div class="navbar_right">
+{% if request.user.is_authenticated %}
+<ul>
+    <li><b><a href='{% url 'potlucks:user_logout' %}'>Logout</a></b></li>
+    <li><b><a href='{% url 'potlucks:user_profile' %}'>{{ request.user.username }}</a></b></li>
+</ul>
+{% else %}
 <ul>
     <li><b><a href='{% url 'potlucks:user_register' %}'>Register</a></b></li>
     <li><b><a href='{% url 'potlucks:user_login' %}'>Login</a></b></li>
 </ul>
+{% endif %}
 </div>
 </div>
 </html>
