--- a/potlucks/templates/potlucks/user_login.html
+++ b/potlucks/templates/potlucks/user_login.html
@@ -1,5 +1,25 @@
 {% include "potlucks/navbar.html" %}
 {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'potlucks/forms.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
 <div class="main">
 <h1>This is the user login page</h1>
+
+<!--Check for error message and display-->
+{% if error_message %}
+<p><strong>{{ error_message }}</strong></p>
+{% endif %}
+
+<div class="forms">
+<form action='{% url "potlucks:user_auth" %}' method='post'>
+{% csrf_token %}
+<ul>
+    <li><b>Username:</b><br>
+    <input type="text" name="username" /></li>
+    <li><b>Password:</b><br>
+    <input type="password" name="password" /></li>
+    <li><input type="submit" value="Login" /></li>
+</ul>
+</form>
+</div>
 </div>
