--- a/potlucks/templates/potlucks/user_register.html
+++ b/potlucks/templates/potlucks/user_register.html
@@ -11,6 +11,16 @@
 {% csrf_token %}
 <ul>
     <!--Each input has a title, a help hover key, and a helper message-->
+    <li><b>First Name:
+    <div class="forms-help-key">?</b>
+    <div class="forms-help">Enter Username</div></div><br>
+    <input type="text" name="firstname" /></li>
+    
+    <li><b>Last Name:
+    <div class="forms-help-key">?</b>
+    <div class="forms-help">Enter Username</div></div><br>
+    <input type="text" name="lastname" /></li>
+    
     <li><b>Username:
     <div class="forms-help-key">?</b>
     <div class="forms-help">Enter Username</div></div><br>
