--- a/luckyfeast/potlucks/templates/potlucks/index.html
+++ b/luckyfeast/potlucks/templates/potlucks/index.html
@@ -1,5 +1,5 @@
 {% include "potlucks/navbar.html" %}
 {% load static %}
 <div class="main">
-<h1>This is the index</h1>
+<h1>{{ browser }}</h1>
 </div>
