--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_details.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_details.html
@@ -3,12 +3,46 @@
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/table-list.css' %}">
 <div class="main">
-<h1>Manage {{ event.name }}</h1>
+<h1>{{ event.name }} Details</h1>
+{% if event.host == request.user %} 
+    <form action="{% url 'potlucks:event_cancel' %}" method="POST">
+    {% csrf_token %}
+    <input type="hidden" name="event_id" value="{{ event.pk }}" />
+    <input type="submit" value="Cancel Event" />
+{% endif %}
+<!--DISPLAY EVENT PARAMETERS HERE-->
+<div style="width: 100%; display:block;">
+<div style="width: 15%; position:relative; float: left;">
+<h3>Address</h3>
+{{ event.address }}
+</div>
+<div style="width: 15%; position:relative; float:left;">
+<h3>City</h3>
+{{ event.city }}
+</div>
+<div style="width: 15%;position:relative; float: left;">
+<h3>Zip</h3>
+{{ event.zipcode }}
+</div>
+<div style="width: 25%;position:relative; float: left">
+<h3>Start</h3>
+{{ event.start_time }}
+</div>
+<div style="width: 30%;position:relative; float: left">
+<h3>End</h3>
+{{ event.end_time }}
+</div>
+</div>
 
 <!--TABLE DISPLAY FOR DISH ASSIGNMENT LIST-->
-<div class="table-list" id="dish_table" style="float: left; width: 50%;">
+<div class="table-list" id="dish_table" style="margin-top:20px; float: left; width: 50%;">
 <h2>This is the dish assignment list</h2>
 <table>
+    {% if event.host != request.user %}
+    <tr>
+    <td>{{ guest_instance.assignment.dish_type }}</td>
+    </tr>
+    {% endif %}
 {% for dish in event.assignment_set.all %}
     <tr>
     <td>{{ dish.dish_type }}</td>
@@ -29,7 +63,7 @@
         <td><input type="submit" value="Remove Dish" /></td>
         </form>
     {% endif %}
-    <tr>
+    </tr>
 {% endfor %}
 </table>
 {% if event.host == request.user %} 
@@ -42,7 +76,7 @@
 </div>
 
 <!--TABLE DISPLAY FOR GUEST LIST-->
-<div class="table-list" id="guest_table" style="float: left; width: 50%;">
+<div class="table-list" id="guest_table" style="margin-top: 20px; float: left; width: 50%;">
 <h2>This is the guest list</h2>
 <table>
 {% for guest in event.guest_instance_set.all %}
