--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_rsvp_invite.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_rsvp_invite.html
@@ -7,8 +7,8 @@
 <form action="{% url 'potlucks:event_rsvp_action' %}" method="POST">
 {% csrf_token %}
 <input type="hidden" name="event_id" value="{{ event.pk }}" />
-<input type="radio" name="rsvp" value="2" />Going</input>
-<input type="radio" name="rsvp" value="3" />Not Going</input>
+<input type="radio" name="rsvp" value="2" id="radioGoing" />Going</input>
+<input type="radio" name="rsvp" value="3" id="notGoing" checked="checked" />Not Going</input>
 <br><br>
 
 <!--DISPLAY EVENT PARAMETERS HERE-->
@@ -37,17 +37,17 @@
 
 <!--TABLE DISPLAY FOR DISH ASSIGNMENT LIST-->
 <div class="table-list" id="dish_table" style="margin-top:20px; float: left; width: 50%;">
-<h2>This is the dish assignment list</h2>
+<h2>Please choose a dish to bring</h2>
 <table>
 {% for dish in event.assignment_set.all %}
     <tr>
-    <td><input type="radio" name="dish_id" value="{{ dish.pk }}" /></td>
     <td>{{ dish.dish_type }}</td>
     <td>{{ dish.assignment_status }}</td>
+    <td><input type="radio" name="dish_id" class="dishRadio" value="{{ dish.pk }}" /></td>
     </tr>
 {% endfor %}
 </table>
-<input type="submit" value="Confirm RSVP" />
+<input type="submit" id="submitButton" value="Confirm RSVP" />
 </form>
 </div>
 
@@ -62,12 +62,34 @@
     </tr>
 {% endfor %}
 </table>
-{% if event.host == request.user %} 
-    <form action="{% url 'potlucks:event_add_guests' %}" method="POST">
-    {% csrf_token %}
-    <input type="hidden" name="event_id" value="{{ event.pk }}" />
-    <input type="submit" value="Add Guests" />
-    </form>
-{% endif %}
 </div>
 </div>
+
+<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
+<script>
+  $(document).ready(function()
+  {
+    $("#radioGoing").change(function()
+    {
+      if( $("#radioGoing").is(':checked'))
+      {
+        $("#submitButton").prop('disabled', true);
+      }
+    });
+    $("#notGoing").change(function()
+    {
+      if( $("#notGoing").is(':checked'))
+      {
+        $("#submitButton").prop('disabled', false);
+      }
+    });
+    $(".dishRadio").change(function()
+    {
+      if( $(".dishRadio").is(':checked'))
+      {
+        $("#submitButton").prop('disabled', false);
+      }
+    });
+  });
+</script>
+
